instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:12: error: identifier expected but integer literal found.
setPos(x:1,y:5) 
         ^InstructionsDrawG:14: error: ')' expected but '}' found.
	}
        ^